fixing flexboxes/spacing on main page + adding book now button to main page + adding redir ect from experts to bookings

--- a/src/pages/main/Main.css
+++ b/src/pages/main/Main.css
@@ -1,3 +1,13 @@
+
+@font-face {
+  font-family: 'Inter';
+  src: url('../../fonts/Inter-3.19/Inter Web/Inter-Regular.woff2') format('woff2'),
+  url('../../fonts/Inter-3.19/Inter Web/Inter-Regular.woff') format('woff');
+
+  font-weight: normal;
+  font-style: normal;
+}
+
 .main {
     height: 100%;
     width: 100%;
@@ -20,11 +30,22 @@
 }
 
 .info-section-quote {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     width: 100%;
     height: 100%;
     color: white;
     text-align:center;
-    font-size: 1.25rem;
+    font-size: 1.3rem;
+    font-weight: 200;
+    font-family: 'Inter', sans-serif;
+}
+
+.info-section-quote-center {
+    height: 100%;
+    width: 100%;
+    top: 50%;
 }
 
 .logo {
@@ -79,5 +100,43 @@
     height: 100%;
     width: 100%;
     justify-content: space-evenly;
+}
+
+.bottom-section-left {
+    width: 60%;
+    height:100%;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justfiy-content: flex-end;
+}
+
+.bottom-section-right {
+    position: relative;
+    width: 40%;
+    height:100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.bottom-section-book-button {
+    position: absolute;
+    background-color: #57D14C;
+    width: 30%;
+    height: 20%;
+    bottom: 20%;
+    right: 15%;
+    transform: translate(0%, -50%);
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    border-radius: 5%;
+    cursor: pointer;
+}
+
+
+.bottom-section-book-text {
+    color: white;
 }
 
